<?xml version="1.0"?>
<package format="2">
  <name>an_dynamic_planner</name>
  <version>0.0.0</version>
  <description>The an_dynamic_planner package. It reads pose, goal and dynamic obstacle information and publishes a path.</description>

  <maintainer email="yuanzwan@umich.edu">Yuanzhan Wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>an_messages</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
